Black magic update to java 24